2008-10-12  KURODA Hiraku <hiraku@sapporo.email.ne.jp>
	* test/spec_bayes_filter.rb: Update some specs.

2008-10-12  KURODA Hiraku <hiraku@sapporo.email.ne.jp>
	* hiki/xmlrpc.rb: Fix: Error is raised in 'wiki.putPage' because
	  Filter was not initialized.
	
2008-09-24  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
	* misc/webrick/hikilet.rb: revert change on 2008-01-06,
	  because ENV[key]=nil behavior of ruby 1.9 reverted.

2008-09-19  okkez  <okkez000@gmail.com>

	* hiki/plugin.rb (Hiki::Plugin#initialize): use
	Object#instance_variable_set instead Kernel.eval.

2008-09-19  okkez  <okkez000@gmail.com>

	* hiki/config.rb (Hiki::Config#database): add new method.

	* hiki.cgi: use Hiki::Config#datacase.

	* hiki/xmlrpc.rb (Hiki::XMLRPCHandler#init_handler): ditto.

	* misc/webrick/hikilet.rb (Hikilet#do_GET): ditto.

2008-09-18 KURODA Hiraku <hiraku@sapporo.email.ne.jp>
	* plugin/50bayes_filter.rb, plugin/en/50bayes_filter.rb,
	  plugin/ja/50bayes_filter.rb, test/spec_50bayes_filter.rb
	  : In submitted_page_diff, show difference of text using
	    Util#word_diff.

2008-09-18 KURODA Hiraku <hiraku@sapporo.email.ne.jp>
	* hiki/filter.rb, hiki/filter/bayes_filter.rb,
	  hiki/filter/word_filter.rb, test/spec_bayes_filter.rb
	  : In bayes filter, when text is posted by registered user and
	    judged as spam, add text to ham-db.


2008-08-07 KURODA Hiraku <hiraku@sapporo.email.ne.jp>
	* messages/en.rb: Fix typo. Reported by Kouhei Sutou.

2008-08-06 KURODA Hiraku <hiraku@sapporo.email.ne.jp>
	* hiki/repos/hg.rb, test/test_repos_hg.rb: support mercurial
	repository.

2008-08-06 KURODA Hiraku <hiraku@sapporo.email.ne.jp>
	* hiki/filter/bayes_filter/bayes.rb: Update bayes library.
	* hiki/filter/bayes_filter.rb, plugin/50bayes_filter.rb,
	test/spec_50bayes_filter.rb, test/spec_bayes_filter.rb
	: + Limit number of times of adding ham/spam into database to 10 times.